--- a/yes_page.html
+++ b/yes_page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text">Knew you would say yes!</h1>
+        <h1 class="header_text">Yieee, pa kiss nga!</h1>
         <div class="gif_container">
             <img src="https://media1.tenor.com/m/nisaHYy8yAYAAAAd/besito-catlove.gif">
         </div>
