--- a/yes_page.html
+++ b/yes_page.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1 class="header_text">Yieee, pa kiss nga!</h1>
         <div class="gif_container">
-            <img src="https://media1.tenor.com/m/nisaHYy8yAYAAAAd/besito-catlove.gif">
+            <img src="https://media1.tenor.com/m/nisaHYy8yAYAAAAd/besito-catlove.gif"> HAHA
         </div>
     </div>
 </body>
